correctly formatting the chunks

--- a/src/notebooks/outline_segment_.ipynb
+++ b/src/notebooks/outline_segment_.ipynb
@@ -2464,7 +2464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2492,9 +2492,9 @@
     "    speaker = line['speaker']\n",
     "    text = line['text']\n",
     "    if speaker == 'Pierre':\n",
-    "        ssml_text += f\"<voice name='en-US-GuyNeural'>{text}</voice>\"\n",
+    "        ssml_text += f\"<voice name='en-US-AndrewMultilingualNeural'>{text}</voice>\"\n",
     "    elif speaker == 'Marie':\n",
-    "        ssml_text += f\"<voice name='en-US-JennyNeural'>{text}</voice>\"\n",
+    "        ssml_text += f\"<voice name='en-US-AvaMultilingualNeural'>{text}</voice>\"\n",
     "ssml_text += \"</speak>\"\n",
     "\n",
     "# # use the default speaker as audio output.\n",
@@ -2509,13 +2509,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2\n",
       "SSML content split and saved to multiple files.\n"
      ]
     }
@@ -2527,17 +2528,25 @@
     "def split_ssml(ssml_content, max_length=10000):\n",
     "    chunks = []\n",
     "    while len(ssml_content) > max_length:\n",
-    "        split_index = ssml_content.rfind('</', 0, max_length)\n",
+    "        split_index = ssml_content.rfind('</voice>', 0, max_length)\n",
     "        if split_index == -1:\n",
     "            raise ValueError(\"Cannot split SSML content properly.\")\n",
-    "        chunks.append(ssml_content[:split_index + 1])\n",
-    "        ssml_content = ssml_content[split_index + 1:]\n",
+    "        chunks.append(ssml_content[:split_index+8])\n",
+    "        ssml_content = ssml_content[split_index+8:]\n",
     "    chunks.append(ssml_content)\n",
     "    return chunks\n",
     "\n",
     "# Function to wrap content in SSML tags\n",
-    "def wrap_in_ssml(content):\n",
-    "    return f\"{content}/voice></speak>\"\n",
+    "def wrap_in_ssml(i,content):\n",
+    "    #first chunck\n",
+    "    if i == 0:\n",
+    "        return f\"{content}</speak>\"\n",
+    "    #all the subchunks\n",
+    "    if i < number_of_chuncks-1:\n",
+    "        return f\"<speak version='1.0' xmlns='https://www.w3.org/2001/10/synthesis' xml:lang='en-US'>{content}</speak>\"\n",
+    "    # the last chunck\n",
+    "    elif i == number_of_chuncks-1:\n",
+    "        return f\"<speak version='1.0' xmlns='https://www.w3.org/2001/10/synthesis' xml:lang='en-US'>{content}\"\n",
     "\n",
     "# # Read the SSML content from a file\n",
     "# with open('input.ssml', 'r') as file:\n",
@@ -2546,9 +2555,12 @@
     "# Split the SSML content into chunks\n",
     "chunks = split_ssml(ssml_text)\n",
     "\n",
+    "# lenght of chunks\n",
+    "number_of_chuncks = len(chunks)\n",
+    "print (number_of_chuncks)\n",
     "# Save each chunk to a separate SSML file\n",
     "for i, chunk in enumerate(chunks):\n",
-    "    wrapped_chunk = wrap_in_ssml(chunk)\n",
+    "    wrapped_chunk = wrap_in_ssml(i,chunk)\n",
     "    with open(f'output_part_{i}.ssml', 'w') as file:\n",
     "        file.write(wrapped_chunk)\n",
     "\n",
