--- a/src/notebooks/outline_segment_.ipynb
+++ b/src/notebooks/outline_segment_.ipynb
@@ -716,24 +716,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Speech synthesized to 'LoRA_LowRank_Adaptation_of_Large_Language_Models_podcast_1.wav'\n",
-      "Speech synthesized to 'LoRA_LowRank_Adaptation_of_Large_Language_Models_podcast_2.wav'\n",
-      "Speech synthesized to 'LoRA_LowRank_Adaptation_of_Large_Language_Models_podcast_3.wav'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import azure.cognitiveservices.speech as speechsdk\n",
     "\n",
-    "current_dir = os.getcwd()\n",
     "infiles = []\n",
     "\n",
     "# Fetch environment variables\n",
@@ -764,8 +753,7 @@
     "\n",
     "\n",
     "for i  in range(number_of_chuncks):\n",
-    "    file_path = os.path.join(current_dir, f'output_part_{i}.ssml')\n",
-    "    # file_path = '/workspaces/AutoPodCaster/src/notebooks/output_part_{i}.ssml'\n",
+    "    file_path = '/workspaces/AutoPodCaster/src/notebooks/output_part_{i}.ssml'\n",
     "    \n",
     "    # Read SSML content\n",
     "    with open(file_path, 'r') as file:\n",
@@ -808,21 +796,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'number_of_chunks' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[55], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwave\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Merge multiple wav files into one\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m outfile \u001b[38;5;241m=\u001b[39m podcast_filename\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(\u001b[43mnumber_of_chunks\u001b[49m) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.wav\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_merged.wav\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      6\u001b[0m data \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m infile \u001b[38;5;129;01min\u001b[39;00m infiles:\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'number_of_chunks' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import wave\n",
     "\n",
