--- a/src/notebooks/outline_segment_.ipynb
+++ b/src/notebooks/outline_segment_.ipynb
@@ -814,6 +814,7 @@
     "# Fetch environment variables\n",
     "speech_key = os.environ.get('AZURE_SPEECH_SERVICE_KEY')\n",
     "service_region = os.environ.get('AZURE_SPEECH_SERVICE_REGION')\n",
+    "service_region_azure = service_region_azure = service_region.replace(\" \", \"\").lower()\n",
     "\n",
     "if not speech_key or not service_region or not service_region_azure:\n",
     "    raise ValueError(\"Environment variables for Azure Speech Key and Region are not set.\")\n",
